# tricsquare-poc

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
app/: CLAUDE.md  app.json  package-lock.json  package.json
backend/: CLAUDE.md  README.md  pyproject.toml  template.yaml
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  schemas.py
backend/app/routers/: __init__.py  _template.py  health.py
backend/tests/: _template.py
docs/: CLAUDE.md  agent-handbook.md
tests/: CLAUDE.md
tests/backend/: conftest.py  test_health.py
web/: .gitignore  CLAUDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
web/src/: App.tsx  api.ts  auth.ts  main.tsx
web/src/components/: _template.tsx
web/src/pages/: _template.tsx
